change to the java8 compliant method